created markup header

--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@
 <body>
 
   <div>
-    <!-- @@include('./html/header.html') -->
+    @@include('./html/header.html')
   </div>
 
   <script src="./js/commons.js"></script>
