--- a/src/index.html
+++ b/src/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Index</title>
+  <title>Yoga</title>
   <!-- Load css with preload attr -->
   <link rel="preload" href="./css/libs.min.css" as="style" onload="this.rel='stylesheet'">
   <link rel="preload" href="./css/index.min.css" as="style" onload="this.rel='stylesheet'">
