--- a/src/index.html
+++ b/src/index.html
@@ -22,6 +22,7 @@
 
   <div>
     @@include('./html/header.html')
+    @@include('./html/feedback.html')
   </div>
 
   <script src="./js/commons.js"></script>
