created service block

--- a/src/index.html
+++ b/src/index.html
@@ -23,6 +23,7 @@
   <div>
     @@include('./html/header.html')
     @@include('./html/feedback.html')
+    @@include('./html/service.html')
   </div>
 
   <script src="./js/commons.js"></script>
