--- a/src/html/feedback.html
+++ b/src/html/feedback.html
@@ -1,14 +1,14 @@
 <section class="feedback">
 	<div class="container container--feedback">
-		<form action="" class="feedback-form">
+		<form class="feedback-form">
 			<h3 class="feedback-form__title">Trial Class</h3>
 			<input type="text" class="feedback-form__input" placeholder="Enter your name">
 			<input type="tel" class="feedback-form__input" placeholder="Enter your phone">
 			<select name="class" class="feedback-form__input feedback-form__input--class-choice">
-				<option disabled selected class="class-choice">Chose your class</option><hr>
-				<option value="1" class="class-choice">1</option><hr>
-				<option value="2" class="class-choice">2</option><hr>
-				<option value="3" class="class-choice">3</option><hr>
+				<option disabled selected class="class-choice">Chose your class</option>
+				<option value="1" class="class-choice">1</option>
+				<option value="2" class="class-choice">2</option>
+				<option value="3" class="class-choice">3</option>
 			</select>
 			<input type="submit" value="Try it" class="btn btn--feedback-form">
 		</form>
