created release block

--- a/src/index.html
+++ b/src/index.html
@@ -24,6 +24,7 @@
     @@include('./html/header.html')
     @@include('./html/feedback.html')
     @@include('./html/service.html')
+    @@include('./html/gallery.html')
   </div>
 
   <script src="./js/commons.js"></script>
