created about block

--- a/src/index.html
+++ b/src/index.html
@@ -25,6 +25,7 @@
     @@include('./html/feedback.html')
     @@include('./html/service.html')
     @@include('./html/gallery.html')
+    @@include('./html/about.html')
   </div>
 
   <script src="./js/commons.js"></script>
