created treatment block

--- a/src/index.html
+++ b/src/index.html
@@ -26,6 +26,7 @@
     @@include('./html/service.html')
     @@include('./html/gallery.html')
     @@include('./html/about.html')
+    @@include('./html/treatments.html')
   </div>
 
   <script src="./js/commons.js"></script>
