created footer block

--- a/src/index.html
+++ b/src/index.html
@@ -27,7 +27,8 @@
     @@include('./html/gallery.html')
     @@include('./html/about.html')
     @@include('./html/treatments.html')
-  </div>
+    @@include('./html/footer.html')
+  </div> 
 
   <script src="./js/commons.js"></script>
   <script src="./js/index.js"></script>
