created logic for header

--- a/src/html/feedback.html
+++ b/src/html/feedback.html
@@ -1,4 +1,4 @@
-<section class="feedback">
+<section class="feedback" id="aboutUs">
 	<div class="container container--feedback">
 		<form class="feedback-form">
 			<h3 class="feedback-form__title">Trial Class</h3>
