--- a/src/html/gallery.html
+++ b/src/html/gallery.html
@@ -1,4 +1,4 @@
-<section class="gallery">
+<section id="gallery" class="gallery">
 	<div class="grid">
 		<div class="grid__item">
 			<img src="./img/yoga/img-5.png" alt="yoga-1" class="grid-img">
