--- a/src/html/treatments.html
+++ b/src/html/treatments.html
@@ -1,4 +1,4 @@
-<section class="treatments">
+<section id="elements" class="treatments">
 	<div class="container container--treatments">
 		<div class="treatments-info">
 			<div class="treatments-block">
