--- a/src/index.html
+++ b/src/index.html
@@ -27,6 +27,7 @@
     @@include('./html/gallery.html')
     @@include('./html/about.html')
     @@include('./html/treatments.html')
+    <!-- @@include('./html/checkout.html') -->
     @@include('./html/footer.html')
   </div> 
 
