--- a/src/html/about.html
+++ b/src/html/about.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div id="blog" class="container">
 	<section class="about">
 		<h2 class="title about-title">About us</h2>
 		<div class="about-info">
