--- a/src/html/header.html
+++ b/src/html/header.html
@@ -1,31 +1,30 @@
-<header class="header">
+<header id="header" class="header">
 	<div class="container container--header">
 		<div class="header-mobile">
 			<a href="#" class="logo logo--mobile">
 				<img src="./img/icon/logo.svg" alt="logo" class="logo__img">
 				<p class="logo__caption">yoga</p>			
 			</a>
-			<!-- <div class="ic" style="width:50px;height:50px;background-color:red; z-index: 1;"></div> -->
 			<button id="hamburgerMenu" class="hamburger hamburger--spring" type="button">
 				<span class="hamburger-box">
 					<span class="hamburger-inner hamburger--color"></span>
 				</span>
 			</button>
 		</div> 
-		<nav class="nav">
+		<nav id="nav" class="nav">
 			<ul class="nav__list nav__list--left">
 				<li class="menu-item">
-					<a href="#" class="menu-item__link menu-item__link--active">
+					<a href="#aboutUs" class="menu-item__link menu-item__link--active">
 						About us
 					</a>
 				</li>
 				<li class="menu-item">
-					<a href="#" class="menu-item__link">
+					<a href="#reservation" class="menu-item__link">
 						Reservation
 					</a>
 				</li>
 				<li class="menu-item">
-					<a href="#" class="menu-item__link">
+					<a href="#gallery" class="menu-item__link">
 						Gallery
 					</a>
 				</li>
@@ -36,10 +35,10 @@
 			</a>
 			<ul class="nav__list nav__list--right">
 				<li class="menu-item">
-					<a href="#" class="menu-item__link">Blog</a>
+					<a href="#blog" class="menu-item__link">Blog</a>
 				</li>
 				<li class="menu-item">
-					<a href="#" class="menu-item__link">Elements</a>
+					<a href="#elements" class="menu-item__link">Elements</a>
 				</li>
 				<li class="menu-item">
 					<a href="#" class="menu-item__link">Shop</a>
