created checkout block

--- a/src/html/checkout.html
+++ b/src/html/checkout.html
@@ -1,9 +1,9 @@
-<section class="checkout">
+<section id="shop" class="checkout">
 	<div class="container">
 		<div class="order">
 			<div class="order__form">
 				<div class="price">
-					<span>69</span><sub>/mounth</sub>
+					<h3 class="title price__count">49</h3>
 				</div>
 				<p class="describe">
 					entry date: mon - fri
@@ -11,12 +11,134 @@
 				<p class="describe">
 					entry time: 8a.m = 8p.m
 				</p>
+				<p class="describe describe--last-child">
+					nutrition advicer: no
+				</p>
+				<input type="submit" value="Buy now" class="btn btn--order-form">
+			</div>
+			<div class="order__form">
+				<div class="price">
+					<h3 class="title price__count">69</h3>
+				</div>
 				<p class="describe">
+					entry date: mon - fri
+				</p>
+				<p class="describe">
+					entry time: 8a.m = 8p.m
+				</p>
+				<p class="describe describe--last-child">
+					nutrition advicer: yes
+				</p>
+				<input type="submit" value="Buy now" class="btn btn--order-form">
+			</div>
+			<div class="order__form">
+				<div class="price">
+					<h3 class="title price__count">99</h3>
+				</div>
+				<p class="describe">
+					entry date: mon - sun
+				</p>
+				<p class="describe">
+					entry time: 8a.m = 8p.m 
+				</p>
+				<p class="describe describe--last-child">
 					nutrition advicer: yes
 				</p>
 				<input type="submit" value="Buy now" class="btn btn--order-form">
 			</div>
 		</div>
-		<div class="checkout-review"></div>
+		<div class="checkout-review">
+			<div class="slider">
+					<div class="slide_viewer">
+						<div class="slide_group">
+							<div class="slide">
+								<div class="slide__photo">
+									<img class="trainer-photo" src="./img/person/trainer_1.png" alt="Trainer">
+								</div>
+								<div class="slide__desc">
+									<p class="trainer-desc">
+										Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation toui ullamcomi laboris nisi ut aliquip ex ea commodo consequat.
+									</p>
+									<p class="trainer-position">
+										Trainer
+									</p>
+									<h3 class="title trainer-name">
+										Sara Taylor
+									</h3> 
+								</div>
+							</div>
+							<div class="slide">
+								<div class="slide__photo">
+									<img class="trainer-photo" src="./img/person/trainer_2.png" alt="Trainer">
+								</div>
+								<div class="slide__desc">
+									<p class="trainer-desc">
+										Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation toui ullamcomi laboris nisi ut aliquip ex ea commodo consequat.
+									</p>
+									<p class="trainer-position">
+										Trainer
+									</p>
+									<h3 class="title trainer-name">
+										Laura Shepard
+									</h3>
+								</div>
+							</div>
+							<div class="slide">
+								<div class="slide__photo">
+									<img class="trainer-photo" src="./img/person/trainer_1.png" alt="Trainer">
+								</div>
+								<div class="slide__desc">
+									<p class="trainer-desc">
+										Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation toui ullamcomi laboris nisi ut aliquip ex ea commodo consequat.
+									</p>
+									<p class="trainer-position">
+										Trainer
+									</p>
+									<h3 class="title trainer-name">
+										Sara Taylor
+									</h3>
+								</div> 
+							</div>
+							<div class="slide">
+								<div class="slide__photo">
+									<img class="trainer-photo" src="./img/person/trainer_2.png" alt="Trainer">
+								</div>
+								<div class="slide__desc">
+									<p class="trainer-desc">
+										Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation toui ullamcomi laboris nisi ut aliquip ex ea commodo consequat.
+									</p>
+									<p class="trainer-position">
+										Trainer
+									</p>
+									<h3 class="title trainer-name">
+										Laura Shepard
+									</h3>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+				
+				<div class="slide_buttons">
+				</div>
+				
+				<div class="directional_nav">
+					<button id="previousBtn" class="arrow arrow--left"></button>
+					<div class="directional_nav__next">
+						<div class="next-photo">
+							<img class="next-photo--trainer-photo" src="./img/person/trainer_2.png" alt="Trainer">
+						</div>
+						<div class="next-desc ">
+							<h3 class="title next-desc__name">
+								Sara Taylor
+							</h3>
+							<p class="next-desc__position">
+								Trainer
+							</p>
+						</div>
+					</div>
+					<button id="nextBtn" class="arrow arrow--right"></button>
+				</div>
+		</div>
 	</div>
 </section>
