--- a/src/html/header.html
+++ b/src/html/header.html
@@ -41,7 +41,7 @@
 					<a href="#elements" class="menu-item__link">Elements</a>
 				</li>
 				<li class="menu-item">
-					<a href="#" class="menu-item__link">Shop</a>
+					<a href="#shop" class="menu-item__link">Shop</a>
 				</li>
 			</ul>
 		</nav>
