added mobile checkout

--- a/src/html/about.html
+++ b/src/html/about.html
@@ -15,7 +15,7 @@
 			<div class="about-info__quote">
 				<blockquote class="about-quote">
 					Lorem ipsum dolor sit amet, consectetur zxc ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation toui ullamcomi laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor it in lorei voluptate velit esse cillum dolore eu fugiat nulla pariatur lorem ispum loting sokui.
-				</blockquote>
+				</blockquote> 
 				<div class="about-img-block">
 					<button id="arrowRight" class="arrow arrow--right"></button> 
 					<button id="arrowLeft" class="arrow arrow--left"></button>
@@ -27,8 +27,8 @@
 					Lorem ipsum laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor it in lorei voluptate velit esse cillum dolore eu fugiat nulla pariatur lorem ispum loting sokui.
 				</blockquote>
 				<div class="about-img-block">
-					<button id="arrowRight" class="arrow arrow--right"></button> 
-					<button id="arrowLeft" class="arrow arrow--left"></button>
+					<button id="arrowRight" class="arrow arrow--about arrow--right"></button> 
+					<button id="arrowLeft" class="arrow arrow--about arrow--left"></button>
 					<img class="about-img-block__img" src="./img/yoga/img-3.png" alt="yoga">
 				</div>
 			</div>
