added fix project

--- a/src/html/feedback.html
+++ b/src/html/feedback.html
@@ -2,9 +2,9 @@
 	<div class="container container--feedback">
 		<form class="feedback-form">
 			<h3 class="feedback-form__title">Trial Class</h3>
-			<input type="text" class="feedback-form__input" placeholder="Enter your name">
-			<input type="tel" class="feedback-form__input" placeholder="Enter your phone">
-			<select name="class" class="feedback-form__input feedback-form__input--class-choice">
+			<input type="text" class="feedback-form__input" placeholder="Enter your name" required>
+			<input type="tel" class="feedback-form__input" placeholder="Enter your phone" required>
+			<select name="class" class="feedback-form__input feedback-form__input--class-choice" required>
 				<option disabled selected class="class-choice">Chose your class</option>
 				<option value="1" class="class-choice">1</option>
 				<option value="2" class="class-choice">2</option>
