--- a/src/html/about.html
+++ b/src/html/about.html
@@ -9,7 +9,7 @@
 				<div class="about-img-block">
 					<button id="arrowRight" class="arrow arrow--right"></button> 
 					<button id="arrowLeft" class="arrow arrow--left"></button>
-					<img class="about-img-block__img" src="./img/yoga/img-13.png" alt="yoga">
+					<img class="about-img-block__img" src="https://picsum.photos/550/350" alt="yoga">
 				</div>
 			</div>
 			<div class="about-info__quote">
@@ -19,7 +19,7 @@
 				<div class="about-img-block">
 					<button id="arrowRight" class="arrow arrow--right"></button> 
 					<button id="arrowLeft" class="arrow arrow--left"></button>
-					<img class="about-img-block__img" src="./img/yoga/img-1.png" alt="yoga"> 
+					<img class="about-img-block__img" src="https://loremflickr.com/550/350" alt="yoga"> 
 				</div>
 			</div>
 			<div class="about-info__quote">
@@ -29,7 +29,7 @@
 				<div class="about-img-block">
 					<button id="arrowRight" class="arrow arrow--about arrow--right"></button> 
 					<button id="arrowLeft" class="arrow arrow--about arrow--left"></button>
-					<img class="about-img-block__img" src="./img/yoga/img-3.png" alt="yoga">
+					<img class="about-img-block__img" src="https://www.fillmurray.com/550/350" alt="yoga">
 				</div>
 			</div>
 		</div>
